--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,13 @@
 server:
-  port: 8080
+  port: 8000
 database:
   host: "localhost"
   port: "3306"
   user: "root"
   password: "12345678"
   dbname: "yuquepp"
+redis:
+  host: "localhost"
+  port: "6379"
+  password: ""
+  db: 0
