--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,3 +12,5 @@ redis:
   password: ""
   db: 0
 document_store_path: "/Users/gaotianhe/storageFile/document"
+elasticsearch:
+  address: "http://localhost:9200"
