--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,6 +11,6 @@ redis:
   port: "6379"
   password: ""
   db: 0
-document_store_path: "/Users/gaotianhe/storageFile/document"
+document_store_path: "./data/document"
 elasticsearch:
   address: "http://localhost:9200"
