--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,16 +1,16 @@
 server:
   port: 8000
 database:
-  host: "localhost"
+  host: "db"  # 使用 mysql 服务的容器名 "db"
   port: "3306"
   user: "root"
   password: "12345678"
   dbname: "yuquepp"
 redis:
-  host: "localhost"
+  host: "redis"  # 使用 redis 服务的容器名 "redis"
   port: "6379"
   password: ""
   db: 0
 document_store_path: "./data/document"
 elasticsearch:
-  address: "http://localhost:9200"
+  address: "http://es:9200"  # 使用 Elasticsearch 服务的容器名 "es"
