fix():update docker-compose.yml
disable es https

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     environment:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xmx512m -Xms512m
+      - xpack.security.http.ssl.enabled=false
     volumes:
       - es_data:/usr/share/elasticsearch/data
       - /etc/localtime:/etc/localtime:ro
